# ai-project-template

./: README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/services/: parser_service.py
